testdata/invalid/invalid_op_code_11.bop
[opcode("1234")]
struct InvalidOpCode11A {}

[opcode(0x34333231)]
struct InvalidOpCode11B {}
